file is making it to server, next postgres

--- a/Pages/FileUpload.cshtml
+++ b/Pages/FileUpload.cshtml
@@ -9,7 +9,7 @@
     ViewData["Title"] = "File Upload";
 }
 
-<form method="post" class="col-sm-6" enctype="multipart/form-data">
+<form method="post" enctype="multipart/form-data">
     <div><input asp-for="my_string"></intput>
     </div>
 
@@ -27,7 +27,7 @@
         <button class="btn btn-primary" id="submit">Submit</button>
     </div>
 
-    <div id="file_name">nothing</div>
+
 </form>
 
 
