progress on file upload

--- a/Pages/Admin/Admin.cshtml
+++ b/Pages/Admin/Admin.cshtml
@@ -19,9 +19,12 @@
 <div><a href="/Admin/Categories">Categories</a></div>
 <div><a href="/Admin/Statuses">Statuses</a></div>
 <div><a href="/Admin/Priorities">Priorities</a></div>
-
-<div><a href="/Admin/Priorities">Queries</a></div>
-
+<div><a href="/Admin/Organizations">Organizations</a></div>
+<br>
+<div><a href="/Admin/Queries">Queries</a></div>
+<br>
+<div><a href="/Admin/Email">Email/a></div>
+<div><a href="/Admin/RunSql">RunSql</a></div>
 <div><a href="/Admin/Logs">Logs</a></div>
 
 @section Scripts {
