--- a/Pages/ResetPassword.cshtml
+++ b/Pages/ResetPassword.cshtml
@@ -9,17 +9,23 @@
     ViewData["Title"] = "Register";
 }
 
+<h1>Reset Password</h1>
+
 <partial name="_FlashPartial" />
 
+<div class="form_div">
 <form method="post">
-    <div>Password
+    <div>
+        <label>Password</label>
         <input type="password" asp-for="password" />
     </div>
-    <div>Re-enter password
+    <div>
+        <label>Re-enter password</label>
         <input type="password" asp-for="retyped_password" />
     </div>
-    <div><input type="submit" value="Reset Password"></div>
+    <div><button type="submit">Reset Password</button>
 </form>
+</div>
 <div><a href="Login">Login</a></div>
 
 @section Scripts {
