--- a/Pages/Shared/_IssuePostsPartial.cshtml
+++ b/Pages/Shared/_IssuePostsPartial.cshtml
@@ -2,13 +2,30 @@
     if (Model.dt_posts is not null)
     {
         foreach (DataRow dr in Model.dt_posts.Rows)
-        { 
+        {
             <div class="post">
-                <div class="post_who_when">Posted by @dr["us_username"] on @dr["p_created_date"]&nbsp;&nbsp;@dr["p_id"]</div>
                 <div class="post_text">
                     <pre>@dr["p_text"]</pre>
                 </div>
+                <div class="post_who_when">
+                    Posted by @dr["us_username"] on @dr["p_created_date"]&nbsp;&nbsp;@dr["p_id"]
+                </div>
+
+                @{
+                    if ((string)dr["p_file_name"] != "junk")
+                    {
+                        <div class="post_who_when">
+                            File: @dr["p_file_name"], Size: @dr["p_file_length"],
+                            Type: @dr["p_file_content_type"]/@dr["p_file_content_disposition"]
+                            &nbsp;&nbsp;
+                            <a href="FetchFile?id=@dr[0]">Download</a>
+                            &nbsp;&nbsp;
+                            <a href="javascript:view_file(@dr[0])">View</a>
+                        </div>
+                    }
+                }
+
             </div>
         }
-    } 
+    }
 }
