--- a/Pages/Shared/_Layout_simple.cshtml
+++ b/Pages/Shared/_Layout_simple.cshtml
@@ -28,7 +28,7 @@
 </head>
 
 @{
-    Console.WriteLine("layout: " +
+    Console.WriteLine("layout_simple http status: " +
             HttpContextAccessor.HttpContext.Response.StatusCode.ToString());
     if (HttpContextAccessor.HttpContext.Response.StatusCode == 302)
     {
