image upload working

--- a/Pages/FileUpload.cshtml
+++ b/Pages/FileUpload.cshtml
@@ -15,7 +15,7 @@
 
 
     <div>
-        <label class="file_upload_label">
+        <label class="file_upload_label fake_link">
             Attach file:
             <input type="file" class="file_upload_input" asp-for="UploadedFile" />
 
@@ -24,7 +24,7 @@
     </div>
 
     <div>
-        <button class="btn btn-primary" id="submit">Submit</button>
+        <button id="submit">Submit</button>
     </div>
 
 
