--- a/Pages/Search.cshtml
+++ b/Pages/Search.cshtml
@@ -21,7 +21,8 @@
         </div>
 
         <div class="info_text">
-            Examples:
+            These examples are from <a href="https://www.postgresql.org/docs/12/textsearch-controls.html#TEXTSEARCH-PARSING-QUERIES">PostgreSQL's documentation</a>,
+            but only the first two seem to be working in Budoco:
             <br>
             dog cat => searchs for text that contains both dog AND cat
             <br>
